--- a/package.json
+++ b/package.json
@@ -1,1 +1,12 @@
-
+{
+  "name": "wa-auto-warn-bot",
+  "version": "1.0.0",
+  "main": "bot.js",
+  "scripts": {
+    "start": "node bot.js"
+  },
+  "dependencies": {
+    "@whiskeysockets/baileys": "^6.5.0",
+    "@hapi/boom": "^10.0.0"
+  }
+}
